kubernetes-labs/lab-28-istio-timeout-retry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-28-timeout
  labels:
    istio-injection: enabled
